--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body, html {
 </div>
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="home">
+<header class="bgimg w3-display-container w3-grayscale-min" id="inicio">
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white" style="font-size:90px">Big<br>Data</span>
   </div>
