--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body, html {
 <div class="w3-top">
   <div class="w3-row w3-padding w3-black">
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-black">INCIO</a>
+      <a href="#" class="w3-button w3-block w3-black">INICIO</a>
     </div>
     <div class="w3-col s3">
       <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
@@ -44,7 +44,7 @@ body, html {
 </div>
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="inicio">
+<header class="bgimg w3-display-container w3-grayscale-min" id="inici">
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white" style="font-size:90px">Big<br>Data</span>
   </div>
