--- a/index.html
+++ b/index.html
@@ -32,22 +32,25 @@ body, html {
       <a href="#" class="w3-button w3-block w3-black">INICIO</a>
     </div>
     <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
+      <a href="#about" class="w3-button w3-block w3-black">ACERCA DE</a>
     </div>
     <div class="w3-col s3">
       <a href="#menu" class="w3-button w3-block w3-black">MENU</a>
     </div>
     <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-black">WHERE</a>
+      <a href="#where" class="w3-button w3-block w3-black">UBICACION</a>
     </div>
   </div>
 </div>
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="inici">
+<header class="bgimg w3-display-container w3-grayscale-min" id="inicio">
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white" style="font-size:90px">Big<br>Data</span>
   </div>
+  <div class="w3-display-bottomright w3-center w3-padding-large">
+   <span class="w3-text-white" style="font-size:45px">VISUALIZACIÓN</span>
+   </div>
 </header>
 
 <!-- Add a background color and large text to the whole page -->
